更新大量同盟事件的技术资料表格

--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -210,6 +210,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.2.12" data-path="成长日历.html"><a href="成长日历.html#第二个五星"><i class="fa fa-check"></i><b>2.2.12</b> 第二个五星</a></li>
 <li class="chapter" data-level="2.2.13" data-path="成长日历.html"><a href="成长日历.html#关服通知"><i class="fa fa-check"></i><b>2.2.13</b> 关服通知</a></li>
+<li class="chapter" data-level="2.2.14" data-path="成长日历.html"><a href="成长日历.html#悲伤的五个阶段"><i class="fa fa-check"></i><b>2.2.14</b> 悲伤的五个阶段</a></li>
+<li class="chapter" data-level="2.2.15" data-path="成长日历.html"><a href="成长日历.html#游戏还在继续"><i class="fa fa-check"></i><b>2.2.15</b> 游戏还在继续</a>
+<ul>
+<li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
+<li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -224,9 +231,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="3.2.1" data-path="技术资料.html"><a href="技术资料.html#事件目标"><i class="fa fa-check"></i><b>3.2.1</b> 事件目标</a></li>
 </ul></li>
-<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.3</b> 同盟</a>
+<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#机器人升级概算表"><i class="fa fa-check"></i><b>3.3</b> 机器人升级概算表</a></li>
+<li class="chapter" data-level="3.4" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.4</b> 同盟</a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.3.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.4.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.2" data-path="技术资料.html"><a href="技术资料.html#同盟事件"><i class="fa fa-check"></i><b>3.4.2</b> 同盟事件</a>
+<ul>
+<li class="chapter" data-level="3.4.2.1" data-path="技术资料.html"><a href="技术资料.html#一日事件"><i class="fa fa-check"></i><b>3.4.2.1</b> 一日事件</a></li>
+<li class="chapter" data-level="3.4.2.2" data-path="技术资料.html"><a href="技术资料.html#三日事件"><i class="fa fa-check"></i><b>3.4.2.2</b> 三日事件</a></li>
+<li class="chapter" data-level="3.4.2.3" data-path="技术资料.html"><a href="技术资料.html#七日事件"><i class="fa fa-check"></i><b>3.4.2.3</b> 七日事件</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -249,13 +263,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">百炼为战：原生体成长记</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-10-15</em></p>
+<p class="date"><em>更新时间：2022-10-23</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
+<li>2022年10月23日：<a href="成长日历.html#游戏还在继续">关服后第一周的历程</a>，更新技术资料中<a href="技术资料.html#同盟事件">同盟事件的大量数据表格</a></li>
 <li>2022年10月：入坑玩到50级，得到第二个五星，探索指挥官难度，完成<a href="成长日历.html#入坑期">入坑期</a>，进入<a href="成长日历.html#成长期">成长期</a>，发布初稿。技术资料逐步更新。</li>
 </ul>
 </div>
