--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -210,6 +210,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.2.12" data-path="成长日历.html"><a href="成长日历.html#第二个五星"><i class="fa fa-check"></i><b>2.2.12</b> 第二个五星</a></li>
 <li class="chapter" data-level="2.2.13" data-path="成长日历.html"><a href="成长日历.html#关服通知"><i class="fa fa-check"></i><b>2.2.13</b> 关服通知</a></li>
+<li class="chapter" data-level="2.2.14" data-path="成长日历.html"><a href="成长日历.html#悲伤的五个阶段"><i class="fa fa-check"></i><b>2.2.14</b> 悲伤的五个阶段</a></li>
+<li class="chapter" data-level="2.2.15" data-path="成长日历.html"><a href="成长日历.html#游戏还在继续"><i class="fa fa-check"></i><b>2.2.15</b> 游戏还在继续</a>
+<ul>
+<li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
+<li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -224,9 +231,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="3.2.1" data-path="技术资料.html"><a href="技术资料.html#事件目标"><i class="fa fa-check"></i><b>3.2.1</b> 事件目标</a></li>
 </ul></li>
-<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.3</b> 同盟</a>
+<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#机器人升级概算表"><i class="fa fa-check"></i><b>3.3</b> 机器人升级概算表</a></li>
+<li class="chapter" data-level="3.4" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.4</b> 同盟</a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.3.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.4.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.2" data-path="技术资料.html"><a href="技术资料.html#同盟事件"><i class="fa fa-check"></i><b>3.4.2</b> 同盟事件</a>
+<ul>
+<li class="chapter" data-level="3.4.2.1" data-path="技术资料.html"><a href="技术资料.html#一日事件"><i class="fa fa-check"></i><b>3.4.2.1</b> 一日事件</a></li>
+<li class="chapter" data-level="3.4.2.2" data-path="技术资料.html"><a href="技术资料.html#三日事件"><i class="fa fa-check"></i><b>3.4.2.2</b> 三日事件</a></li>
+<li class="chapter" data-level="3.4.2.3" data-path="技术资料.html"><a href="技术资料.html#七日事件"><i class="fa fa-check"></i><b>3.4.2.3</b> 七日事件</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -921,7 +935,37 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </p>
 </div>
 <p>游戏将在2023年1月13日停服下线，虽然还有三个月的时间，但在一片嗟叹中，很多玩家也当场离开或不久就要离开，所以同盟的资源产量想必也会大幅降低，再费力去肝资源升级似乎已经意义不大，我想我还是尽量把这篇教程的<a href="技术资料.html#技术资料">技术资料</a>部分完善，作为游戏的历史留存下来。</p>
+</div>
+<div id="悲伤的五个阶段" class="section level3 hasAnchor" number="2.2.14">
+<h3><span class="header-section-number">2.2.14</span> 悲伤的五个阶段<a href="成长日历.html#悲伤的五个阶段" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>虽然这个游戏已经在ICU活了两三年，但是官方宣布要拔氧气管的时候相信很多人跟我一样难以接受，其表现与库伯勒-罗丝模型的五阶段悲伤类似：</p>
+<ol style="list-style-type: decimal">
+<li>“否认”：“不会吧，不可能啊！”，“不是开始出新机器人了吗？”，“可能是跟我们开玩笑吧？”</li>
+<li>“愤怒”：“为什么关这个游戏？这不公平！”，“其他游戏这么烂不都活得好好的吗？”</li>
+<li>“恳求”：“拜托哪个金主把游戏收购继续做下去吧！”，“谁有技术搞个私服吧！”，“官方出个单机版吧！”</li>
+<li>“沮丧”：“唉，躺平吧，随便玩玩啦。”，“截图留个遗照吧。”</li>
+<li>“接受”：“趁着还能玩打完传奇3吧”，“卸载了，去玩地球之战咯”，“龙欣在哪个群啊？”</li>
+</ol>
+<p>不得不说，做为游戏的骨灰级玩家，知道游戏撑不下去了，一下就感觉抽掉了一根精神支柱。早上起来再也不像原来马上开展各种模式。很多盟友马上就卸载游戏，这一期的盟战甚至也没有正常完成，是比较悲伤。官方发布公告是一个周六，我醒来的时候好几个夜猫子和其他时区的指挥官给我留言，说终于可以弃坑了。看完公告后，告诉一直替我抽卡盼着爆四星五星的儿子说：“不用操心第三个五星是谁了，卡邦送了五个！”，然后说游戏快要关了。这几年变形金刚于我而言净是离别，无论是IDW 1.0，IDW 2.0的漫画，还是如今的百炼为战。但“It never ends”不也就像反复复活的擎天柱一样，代表着变形金刚文化。没有了百炼，生活还要继续，我盼望着还有更优秀的变形金刚游戏出现。</p>
+</div>
+<div id="游戏还在继续" class="section level3 hasAnchor" number="2.2.15">
+<h3><span class="header-section-number">2.2.15</span> 游戏还在继续<a href="成长日历.html#游戏还在继续" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="还会有克劳莉娅吗" class="section level4 hasAnchor" number="2.2.15.1">
+<h4><span class="header-section-number">2.2.15.1</span> 还会有克劳莉娅吗<a href="成长日历.html#还会有克劳莉娅吗" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>10月20日的时候官方通知接下来的两周为过渡周，通用币机器人为黄蜂和巨蝎勇士（跟我这个号抽到的前两个五星完全一致，冥冥之中自有天意？），两周的过渡周并不让人意外，但也让克劳莉娅是否能发布再次变得扑朔迷离，据老外分析，9.1中还有克劳莉娅，但是9.2的游戏数据中已经没有她了。不过通知关服后正好是12周的时间，2周超能勇士活动，另外还有10周正好是两个新人物发布周期，是不是还可以期待一下？</p>
+</div>
+<div id="能量块大放送" class="section level4 hasAnchor" number="2.2.15.2">
+<h4><span class="header-section-number">2.2.15.2</span> 能量块大放送<a href="成长日历.html#能量块大放送" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>在宣布关服后很多人要求卡邦把资源放开，无限提供各类火种、黄金、能量块，让大家能把想升的都升到毕业。要求可能有点高，但卡邦现在每周送3500能量块还是比较慷慨的，也省得天天看广告（我想我也会怀念《胜利之吻》各种不同的屁股）了。这么多能量块要怎么花？首先我把精通推进了一部分，点满了勇气，让汽车大师在突袭中更有优势。打开了深度创伤加强战擎和黄豹。</p>
+<p>因为我的遗迹券19张，于是在新一轮特殊任务开始时赶紧探索了新手，买到了隐形场，然后开掉那些能产黄金的水晶（黄金水晶，竞技场水晶，矿13水晶）。卡邦虽然送能量块，但是黄金可没送，升级依然很累。</p>
+</div>
+<div id="星满锻还是53满级" class="section level4 hasAnchor" number="2.2.15.3">
+<h4><span class="header-section-number">2.2.15.3</span> 4星满锻还是53满级<a href="成长日历.html#星满锻还是53满级" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>看看我这个号，如果卡邦不开启无尽资源模式，我目前没可能发展出5星主力了，只能考虑四星满锻。正常情况下玩到这里也是要权衡一下是发展4星满锻还是53满级当主力的。</p>
+<p>四星满锻战力比53满级高，而且机器人阶数高的时候能力的百分比一般也高，外加锻造给的167%的克制，而且觉醒容易，总的来说是优于53满级。53满级的好处是如果火种正好够的话（五个同样的T3C绝非易事），黄金要不了多少（89万的样子，而满锻一只四星需要几百万的黄金），其次五星当主力的话有领袖协同可以给四星用。</p>
+<p>以目前剩下的时间，如果卡邦不疯狂发放资源，只是发发能量块的话，我能把四星主力满锻一两只就不错了，所以我决定暂停其他四星的升级，资源都给三星和两星的锻造狗粮，能养饿鲨更好。至于五星3阶，目前唯一看得到希望的就是天火，因为有了四个科技T3C。</p>
 
+</div>
 </div>
 </div>
 </div>
