--- a/protoform_book/404.html
+++ b/protoform_book/404.html
@@ -210,6 +210,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.2.12" data-path="成长日历.html"><a href="成长日历.html#第二个五星"><i class="fa fa-check"></i><b>2.2.12</b> 第二个五星</a></li>
 <li class="chapter" data-level="2.2.13" data-path="成长日历.html"><a href="成长日历.html#关服通知"><i class="fa fa-check"></i><b>2.2.13</b> 关服通知</a></li>
+<li class="chapter" data-level="2.2.14" data-path="成长日历.html"><a href="成长日历.html#悲伤的五个阶段"><i class="fa fa-check"></i><b>2.2.14</b> 悲伤的五个阶段</a></li>
+<li class="chapter" data-level="2.2.15" data-path="成长日历.html"><a href="成长日历.html#游戏还在继续"><i class="fa fa-check"></i><b>2.2.15</b> 游戏还在继续</a>
+<ul>
+<li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
+<li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -224,9 +231,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="3.2.1" data-path="技术资料.html"><a href="技术资料.html#事件目标"><i class="fa fa-check"></i><b>3.2.1</b> 事件目标</a></li>
 </ul></li>
-<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.3</b> 同盟</a>
+<li class="chapter" data-level="3.3" data-path="技术资料.html"><a href="技术资料.html#机器人升级概算表"><i class="fa fa-check"></i><b>3.3</b> 机器人升级概算表</a></li>
+<li class="chapter" data-level="3.4" data-path="技术资料.html"><a href="技术资料.html#同盟"><i class="fa fa-check"></i><b>3.4</b> 同盟</a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.3.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.1" data-path="技术资料.html"><a href="技术资料.html#同盟任务盟战"><i class="fa fa-check"></i><b>3.4.1</b> 同盟任务（盟战）</a></li>
+<li class="chapter" data-level="3.4.2" data-path="技术资料.html"><a href="技术资料.html#同盟事件"><i class="fa fa-check"></i><b>3.4.2</b> 同盟事件</a>
+<ul>
+<li class="chapter" data-level="3.4.2.1" data-path="技术资料.html"><a href="技术资料.html#一日事件"><i class="fa fa-check"></i><b>3.4.2.1</b> 一日事件</a></li>
+<li class="chapter" data-level="3.4.2.2" data-path="技术资料.html"><a href="技术资料.html#三日事件"><i class="fa fa-check"></i><b>3.4.2.2</b> 三日事件</a></li>
+<li class="chapter" data-level="3.4.2.3" data-path="技术资料.html"><a href="技术资料.html#七日事件"><i class="fa fa-check"></i><b>3.4.2.3</b> 七日事件</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 </ul>
